# JalMitra

./: .gitignore  README.md
agriwise-connect/: README.md  index.html  pnpm-lock.yaml  tailwind.config.ts
backend/: .env  FOLDER_STRUCTURE.md  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  alert_monitor.py  chatbot.py  chatbot_tools.py  config.py  db.py  dummy_generator.py  export.py  init_data.py  main.py  websocket_manager.py
backend/app/api/v1/: education.py  farms.py  irrigation.py  voice_bot.py
backend/app/external_apis/: agromonitoring_api.py  kaegro_api.py  mapmyindia_api.py  twilio_api.py  voice_api.py
backend/app/llm/: __init__.py  llm_client.py  prompt_templates.py
backend/app/models/: crop.py  education.py  farm.py  irrigation.py
backend/app/schemas/: education.py  farm.py  irrigation.py  notification.py  voice_bot.py
backend/app/services/: crop_cycle_service.py  education_service.py  farm_service.py  irrigation_service.py  rag_service.py  scheme_retrieval_service.py  voice_bot_service.py
backend/app/tasks/: crop_stage_updates.py  daily_notifications.py  irrigation_alerts.py
backend/app/utils/: calculations.py  i18n.py
backend/app/vector_db/: __init__.py  chroma_client.py  embeddings.py  scheme_store.py
backend/scripts/: dummy_data_generator.py  init_sample_data.py  seed_data.py  seed_schemes.py  test_data.py
backend/supabase/: schema.sql
backend/tests/: test_farms.py  test_irrigation.py
docs/: flow-diagram.md
drought-dashboard/: index.html  package-lock.json  package.json
esp32_water_quality/: README.md  (+1 more)
(+82 files in other folders)
